# cxx-dlang

./: .clangd  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
d/: cxx_d.d  smoke.d
examples/demo/: Cargo.toml  build.rs
examples/demo/d/: demo.d
examples/demo/include/: demo.h
examples/demo/src/: main.rs
examples/hello/: main.rs
examples/hello/d/: hello.d
examples/roundtrip/: main.rs
examples/roundtrip/d/: roundtrip.d
examples/structs/: main.rs
include/: cxx_d.h
src/: ffi.rs  lib.rs
tests/: integration.rs
tests/d/: test_module.d
