[package]
name = "cxx-dlang"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Reusable D-side cxx.rs `rust::*` type bindings + LDC2 build glue"
keywords = ["ffi", "dlang", "ldc2", "cxx", "bindings"]
categories = ["development-tools::ffi", "api-bindings", "external-ffi-bindings"]
repository = "https://github.com/kassane/cxx-dlang"
homepage = "https://github.com/kassane/cxx-dlang"
documentation = "https://docs.rs/cxx-dlang"
exclude = ["/target", "/.github", "/tools"]
links = "cxx_d_dlib"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cxx = "1.0"

[build-dependencies]
cc = "1.2"
