[package]
name = "demo"
version = "0.1.0"
edition = "2024"
publish = false
description = "End-to-end consumer of cxx-dlang — own bridge + own .d file + cxx_d imports"

[dependencies]
cxx = "1.0"
cxx-dlang = { path = "../.." }

[build-dependencies]
cxx-build = "1.0"
cc = "1.2"

[[bin]]
name = "demo"
path = "src/main.rs"
